--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ center {
   font-weight: bold;
 }
 
-
 .space-between {
   -webkit-justify-content: space-between;
   justify-content: space-between;
@@ -156,21 +155,21 @@ hr {
 }
 
 #vision {
-  min-height: 100vh;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#useCase {
   width: 100%;
   text-align: center;
 }
 
-#useCase {
-  height: 100vh;
+#howWorks {
   width: 100%;
   text-align: center;
 }
-#about {
-  height: 100vh;
-  width: 100%;
-  text-align: center;
-}
+
 #contact {
   height: 100vh;
   width: 100%;
@@ -185,4 +184,104 @@ hr {
   color: rgba(255, 255, 255, 0.541176);
   width: 100%;
   min-height: 100px;
+}
+
+.vision {
+  margin-top: 5rem;
+  margin: 0 auto;
+  padding-top: 40px;
+  max-width: 600px;
+  text-align: center;
+}
+
+.rwd-table {
+  border-spacing: 0;
+    border-collapse: collapse;
+  margin: 5rem auto;
+  max-width: 800px;
+  text-align: left;
+}
+
+.rwd-table td {
+  display: block;
+}
+
+.rwd-table td:first-child {
+  padding-top: .5em;
+}
+
+.rwd-table td:last-child {
+  padding-bottom: .5em;
+}
+
+.rwd-table td:before {
+  font-weight: bold;
+  width: 6.5em;
+  display: inline-block;
+}
+
+.item-td {
+  font-weight: bold;
+}
+
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
+}
+
+@media (min-width: 480px) {
+  .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+    border: 1px solid #fff;
+  }
+  .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table td:last-child {
+    padding-right: 0;
+  }
+  .item-td {
+    text-align: center;
+    width: 300px;
+    vertical-align:middle;
+  }
+}
+
+.rwd-table {
+  color: #fff;
+  overflow: hidden;
+}
+
+.rwd-table tr {
+  border-color: #fff;
+}
+
+.rwd-table td {
+  margin: .5em 1em;
+}
+
+@media (min-width: 480px) {
+  .rwd-table td {
+    padding: 1em !important;
+  }
+}
+
+.parent {
+  margin-top: 5rem;
+  display: flex;
+}
+
+.col {
+  margin: 0 auto;
+  padding: 1rem;
+  width: 50%;
+}
+
+.col p {
+  margin: 10% 0;
+  float: right;
+  width: 500px;
+  text-align: right;
 }
