--- a/style.css
+++ b/style.css
@@ -373,4 +373,19 @@ hr {
   canvas {
     display: none;
   }
+
+  .col {
+    width: 100%;
+  }
+
+  .col .right, .col p {
+    text-align: left;
+    margin: 10% 0;
+    float: none;
+    width: 100%;
+  }
+
+  .col:nth-child(2) {
+    display: none;
+  }
 }
