--- a/style.css
+++ b/style.css
@@ -292,6 +292,14 @@ body {
   max-width: 50vw;
 }
 
+.block-how-works-text {
+  max-width: 50vw;
+}
+
+.canvas-justice-3 {
+  padding: 3rem 0 0 4rem;
+}
+
 @media all and (max-width: 480px) {
   body {
     font-size: 1rem;
@@ -348,11 +356,29 @@ body {
     justify-content: space-between;
   }
 
-  .block-vision-text {
+  .block-vision-text, .block-how-works-text {
     max-width: 100vw;
   }
 
   .h-title {
     margin: 0 0 2rem 0;
+  }
+
+  .download {
+    margin-top: 1rem;
+  }
+
+  .white-paper {
+    font-size: 1rem;
+  }
+
+  .contact, .download, .mail {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .block-last {
+    padding-bottom: 0;
+    flex-direction: column;
   }
 }
