--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
 }
 
 .active {
-  color: #9448BC;
+  color: #B36AE2;
 }
 
 .space-between {
@@ -174,6 +174,8 @@ body {
 
 .block-last {
   padding-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer {
@@ -258,22 +260,23 @@ body {
   padding: 0.5rem 0.8rem;
   border: 1px solid #fff;
   text-decoration: none;
-  color: #9448BC;
+  color: #B36AE2;
   font-size: 2rem;
 }
 
 .white-paper:hover {
-  border-color: #9448BC;
+  border-color: #B36AE2;
 }
 
 .contact {
   margin-top: 3rem;
+  text-align: center;
 }
 
 .mail {
   font-size: 140px;
   text-decoration: none;
-  color: #9448BC;
+  color: #B36AE2;
 }
 
 #canvas-wrap { position:relative } /* Make this a positioned parent */
