--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body {
+  background-color: #1a1b23;
+  color: #fff;
+}
+
 .introduction {
-    background:url('http://lifethinktravel.com/wp-content/uploads/2014/02/epidaurus.jpg') no-repeat center center;
+    background:url('img/assembly.png') no-repeat center center;
     min-height:100%;
     height: 100vh;
     -webkit-background-size: cover; /* pour anciens Chrome et Safari */
@@ -18,4 +23,8 @@
 
 .activeLink {
   background-color: transparent !important;
+}
+
+.navbar-link {
+  font-weight: bold;
 }
