--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .introduction {
-    background:url('img/assembly.png') no-repeat center center;
+    background:url('img/assembly.png') no-repeat;
     min-height:100%;
     height: 100vh;
     -webkit-background-size: cover; /* pour anciens Chrome et Safari */
@@ -12,6 +12,7 @@ body {
 }
 
 .navbar {
+  padding-top: 30px;
    background-color: transparent;
    background: transparent;
    border-color: transparent;
@@ -28,3 +29,27 @@ body {
 .navbar-link {
   font-weight: bold;
 }
+
+.phone {
+  position: absolute;
+  top: 60px;
+  right: 200px;
+  width: 400px;
+}
+
+.pinakion {
+  position: absolute;
+  top: 250px;
+  right: 100px;
+  width: 230px;
+}
+
+.introduction-text {
+  height: 50vh;
+}
+
+  .bottom-align-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
