--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   color: #fff;
   font-family: "Museo Sans";
   overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .introduction {
@@ -151,10 +152,18 @@ body {
   background: rgb(255, 255, 255);
 }
 
+.the-justice-protocol {
+  padding-top: 50px;
+}
+
 .the-justice-protocol-title-section {
   font-family: "Rift Soft";
   color: rgb(161, 166, 203);
   font-size: 6rem;
+}
+
+.the-justice-protocol-subtitle {
+  font-size: 10rem;
 }
 
 .how-it-works {
@@ -167,10 +176,6 @@ body {
   font-family: "Rift Soft";
   color: rgb(255, 255, 255);
   font-size: 6rem;
-}
-
-.the-justice-protocol-subtitle {
-  font-size: 12rem;
 }
 
 .iMac {
@@ -188,12 +193,14 @@ body {
 }
 
 .applications-title-section {
+  padding-top: 50px;
   font-family: "Rift Soft";
   color: rgb(255, 255, 255);
   font-size: 10rem;
 }
 
 .applications-introduction-text {
+  width: 410px;
   font-family: "Museo Sans";
   color: rgb(127, 131, 163);
   font-size: 3rem;
@@ -210,4 +217,18 @@ body {
 .applications-content-text-2 {
   font-size: 2rem;
   color: rgb(255, 255, 255);
+}
+
+
+@media(min-width:767px) {
+    .navbar {
+        padding: 20px 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+    }
 }
