update form contact

--- a/style.css
+++ b/style.css
@@ -285,13 +285,21 @@ body {
 
 .form-input {
   background: transparent;
+  border-radius: 0;
   border: none;
   border-bottom: solid 1px rgb(127, 131, 163);
 }
 
 .form-input:hover {
+  border-radius: 0;
   border: none;
   border-bottom: solid 1px rgb(127, 131, 163);
+}
+
+.form-control:focus {border-color:rgba(100,100,100,1)!important;
+  -webkit-box-shadow: none!important;
+  -moz-box-shadow: none!important;
+  box-shadow: none!important;
 }
 
 footer {
