--- a/style.css
+++ b/style.css
@@ -302,6 +302,15 @@ body {
   box-shadow: none!important;
 }
 
+.submit {
+  margin-top: 1rem;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 3px;
+  background-color: rgb(131, 137, 177);
+  font-size: 1.5rem;
+}
+
 footer {
   padding: 3rem;
 }
