--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     overflow-y: scroll;
 }
 
+h3 {
+  font-size: 2.2rem;
+}
+
 .introduction {
   background:url('img/assembly.jpg') no-repeat;
   min-height: 100%;
