--- a/style.css
+++ b/style.css
@@ -239,6 +239,10 @@ h3 {
   color: rgb(255, 255, 255);
 }
 
+.applications-kleroterion {
+  font-size: 1.3rem;
+}
+
 .rect {
   border-style: solid;
   border-width: 0.05em 0 0 0;
