--- a/style.css
+++ b/style.css
@@ -1,412 +1,21 @@
-@font-face {
-  font-family: "Museo Sans";
-  src: url("fonts/museosans-500.otf");
-}
-
-@font-face {
-  font-family: 'Rift Soft';
-  src: url('fonts/riftsoft-regular-webfont.woff2') format('woff2'),
-       url('fonts/riftsoft-regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
 body {
-  background-color: #1a1b23;
-  color: #fff;
-  font-family: "Museo Sans";
-  overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-h3 {
-  font-size: 2.2rem;
-}
-
-.navbar-logo {
-  width: 65px;
-}
-
-.introduction {
+  position: relative;
+  padding-top: 65px;
   background:url('img/assembly.jpg') no-repeat;
-  min-height: 100%;
-  height: 100vh;
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size:cover;
 }
 
 .navbar {
-  background-color: transparent;
   background: transparent;
-  border-color: transparent;
 }
 
-.introduction .navbar-brand {
-  display: flex;
-  align-items: center;
-}
-
-.introduction .navbar-brand>img {
-  padding: 7px 14px;
-}
-
-.navbar-brand {
-  padding: 0px;
-}
-
-.navbar-brand>img {
-  width: 70px;
-}
-
-.introduction-sup {
-  position: relative;
-  top: -12px;
-  color: rgb(78, 81, 104);
-}
-
-.activeLink {
-  background-color: transparent !important;
-}
-
-.navbar-link {
-  font-weight: bold;
-}
-
-.phone {
-  position: absolute;
-  top: 25vh;
-  /*right: 8vw;*/
-  width: 400px;
-}
-
-.pinakion {
-  position: absolute;
-  top: 55vh;
-  right: 6vw;
-  width: 230px;
-}
-
-.introduction-text {
-  padding: 0;
-  margin: 0;
-  height: 50vh;
-}
-
-.bottom-align-text {
-
-}
-
-.introduction-row {
-  min-height: 100%;
-  height: 80vw;
-}
-
-
-.title-protocol {
-  font-weight: bold;
-  position: relative;
-  top: 35vh;
-  font-size: 16px;
-  color: rgb(255, 255, 255);
-}
-
-.logo-ethereum {
-  width: 35px;
-  padding: 0 5px;
-}
-
-.title {
-  position: relative;
-  top: 35vh;
-  font-size: 70px;
-  color: rgb(255, 255, 255);
-  font-family: "Rift Soft";
-  color: rgb(161, 166, 203);
-}
-
-.top-description {
-  position: relative;
-  top: 36vh;
-  font-size: 20px;
-}
-
-.top-call-to-action {
-  position: relative;
-  top: 39vh;
-}
-
-.btn-how-it-works {
-  font-size: 2rem;
-  padding: 1rem 1.5rem;
-  color: rgb(49, 56, 68);
-  font-weight: bold;
-}
-
-.btn-how-it-wp {
-  margin-left: 2rem;
-  padding: 1rem 1.5rem;
-  font-size: 2rem;
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  background-color: rgb(78, 81, 104);
-  border-color: transparent;
-}
-
-.btn-how-it-wp:hover {
-  border-color: transparent;
-  transition: background linear 650ms;
-  -webkit-transition: background linear 650ms;
-  background: rgb(255, 255, 255);
-}
-
-.the-justice-protocol {
-  padding-top: 50px;
-}
-
-.the-justice-protocol-title-section {
-  font-family: "Rift Soft";
-  color: rgb(161, 166, 203);
-  font-size: 6rem;
-}
-
-.the-justice-protocol-subtitle {
-  font-size: 10rem;
-}
-
-.the-justice-protocol-introduction {
-  font-size: 3rem;
-}
-
-.the-justice-protocol-inline {
-  color: rgb(161, 166, 203);
-}
-
-.how-it-works {
-  min-height: 30%;
-  min-height: 30vw;
-}
-
-.how-it-works-title-section {
-  padding: 10rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 6rem;
-}
-
-.how-it-works-text {
-  color: gray;
-}
-
-
-
-.iMac {
-  padding-top: 3rem;
-  width: 100%;
-}
-
-
-.applications {
-  padding-top: 200px;
-  min-height: 70%;
-  min-height: 70vw;
-  background: url("img/ipad.png");
-  background-size: cover;
-}
-
-.applications-title-section {
-  padding-top: 50px;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 10rem;
-}
-
-.applications-introduction-text {
-  width: 410px;
-  font-family: "Museo Sans";
-  color: rgb(127, 131, 163);
-  font-size: 3rem;
-  font-weight: bold;
-}
-
-.applications-content-text-1 {
-  padding: 2rem 0;
-  font-size: 2rem;
-  color: gray;
-  width: 400px;
-}
-
-.applications-content-text-2 {
-  font-size: 2rem;
-  color: rgb(255, 255, 255);
-}
-
-.applications-kleroterion {
-  font-size: 1.3rem;
-}
-
-.rect {
-  border-style: solid;
-  border-width: 0.05em 0 0 0;
-  border-color: rgb(219, 180, 113);
-  background-color: rgba(217, 217, 217, 0);
-  opacity: 0.2;
-}
-
-
-.app-icon {
-  position: relative;
-  top: 50px;
-}
-
-.app-title-section {
-  padding: 5rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 6rem;
-}
-
-.team-title-section {
-  padding: 5rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 6rem;
-}
-
-.join-team-title-section {
-  position: relative;
-  top: 9rem;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 4rem;
-}
-
-.join-team-contact-us {
-  color: white;
-  text-decoration: underline;
-  text-align: right;
-}
-
-
-.advisors-title-section {
-  padding: 5rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 5rem;
-}
-
-.faq-title-section {
-  padding: 5rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 6rem;
-}
-
-.panel {
-  background: transparent;
-  border: none;
-}
-
-.contact-title-section {
-  padding: 5rem 0;
-  font-family: "Rift Soft";
-  color: rgb(255, 255, 255);
-  font-size: 4rem;
-}
-
-.slack-icon {
-  padding-right: 4rem;
-}
-
-.form-input {
-  background: transparent;
-  border-radius: 0;
-  border: none;
-  border-bottom: solid 1px rgb(127, 131, 163);
-}
-
-.form-input:hover {
-  border-radius: 0;
-  border: none;
-  border-bottom: solid 1px rgb(127, 131, 163);
-}
-
-.form-control:focus {border-color:rgba(100,100,100,1)!important;
-  -webkit-box-shadow: none!important;
-  -moz-box-shadow: none!important;
-  box-shadow: none!important;
-}
-
-.submit {
-  margin-top: 1rem;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 3px;
-  background-color: rgb(131, 137, 177);
-  font-size: 1.5rem;
-}
-
-.status {
-  color: rgb(179, 152, 95);
-}
-
-.contributor {
-  padding-top: 3rem;
-  color: gray;
-}
-
-.form-input {
+.navbar-light .navbar-brand {
   color: #fff;
 }
 
-footer {
-  color: gray;
-  text-align: center;
-  padding: 3rem;
+.navbar-light .navbar-nav .nav-link {
+  color: #fff;
 }
 
-.footer-mail-to {
-  color: rgb(179, 152, 95);
-}
-
-@media(min-width:767px) {
-    .navbar {
-        padding: 20px 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-    }
-
-    .top-nav-collapse {
-        padding: 0;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-  .introduction {
-    height: auto;
-    padding-top: 60px;
-    background: url('img/assembly.jpg') no-repeat;
-    -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-    background-size:cover;
-  }
-
-  .introduction-row {
-    height: auto;
-  }
-
-  .the-justice-protocol-title-section {
-    font-size: 20px;
-  }
-
-  .the-justice-protocol-subtitle {
-    font-size: 30px;
-  }
-
-  .the-justice-protocol-introduction {
-    font-size: 18px;
-  }
-
-  .applications-title-section {
-    font-size: 30px;
-  }
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #777;
 }
